# code_force

./: .coverage  AGENTS.md  Asha_Defense_Presentation.pptx  Celery_task_design,SOS_retry_logic,chat_integration.md  backend_rules.md  color grading of period dashboard.html  convert_minilm_to_onnx.py  cycle_correction_visual_plan.md  cycle_readjust_retrain.txt  fix_now.txt  frontend_rules.md  guide.md  guide_run_mobile.md  journal_idea.txt  learning.md  model_outof_app.txt  package-lock.json  package.json  pregnancy‑planning_module_guide.txt  presentation.js  run.md  setup.md  sos.txt.txt  storage_rules.md  system_test.md  system_test1.md  system_test2.md  system_test3.md  system_test4.md  system_test5.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  README.md  admin_err.txt  alembic.ini  coverage_output.txt  docker-compose.yml  pyproject.toml  run.py  test_auth.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_auth_initial.py  0002_domain_tables.py  0003_add_composite_indexes.py  0004_auth_email_secret.py  0005_auth_last_login_failed_attempts.py  0006_onboarding_table.py  0007_user_ml_metrics.py  0008_correction_columns.py  0009_snooze_events.py  0010_unique_cycle_entry_constraint.py  0011_prediction_model_fields.py  0012_system_config.py  0013_add_journal_analyses.py  0014_safety_phase4.py  0015_add_checkin_sent.py  0016_cycle_add_cycle_type.py  0017_cycle_add_idempotency_key.py  2026_06_24_1344-911664c419c9_safety_contact_ids_json.py  2026_06_24_1443-7ccfe1b50f12_add_client_updated_at_to_syncable_tables.py  2026_07_01_1558-52433d5717b1_add_client_updated_at_to_user_onboarding.py  2026_07_02_1623-ea796595c9f5_wellness_add_title_mood_notes.py  2026_07_22_0805-93a7172745d5_sync_models_to_db.py
backend/app/: __init__.py  main.py  seed.py
backend/app/core/: __init__.py  audit.py  celery_app.py  config.py  database.py  encryption.py  event_bus.py  exceptions.py  logging_config.py  monitoring.py  pagination.py  rate_limit.py  redis_client.py  responses.py  security.py  security_headers.py  sentry_middleware.py  token_revocation.py
backend/app/integrations/: __init__.py  fcm_client.py  huggingface_client.py  prediction_engine.py  s3_client.py  stream_client.py  twilio_client.py
backend/app/modules/admin/: __init__.py  dependencies.py  exceptions.py  models.py  routes.py  schemas.py  services.py
backend/app/modules/auth/: __init__.py  dependencies.py  exceptions.py  models.py  routes.py  schemas.py  services.py  tasks.py  workflow.md
backend/app/modules/chat/: __init__.py  dependencies.py  exceptions.py  (+4 more)
backend/app/tasks/: checkin.py  global_cleanup.py  retention_cleanup.py
backend/docs/: alerting-runbook.md  data-retention.md  rollback.md  staging-environment.md
backend/docs/adr/: 0001-use-fastapi.md  0002-client-side-encryption.md  0003-event-bus.md  0004-celery-over-pubsub.md  0005-stream-chat.md
backend/plans/: gaps_plan1_report.md
backend/scripts/: fix_pg_hba.ps1  migrate_encryption.py  seed_test_users.py  train_global_model.py  update_model_config.py
backend/tests/: conftest.py  test_celery_app.py  test_encryption.py  test_event_bus.py  test_global_cleanup.py  test_health.py  test_logging_config.py  test_monitoring.py  test_pagination.py  test_rate_limit.py  test_responses.py  test_retention_cleanup.py  test_security.py  test_security_headers.py  test_sentry_middleware.py  test_token_revocation.py
backend/tests/integrations/: __init__.py  test_twilio.py
(+744 files in other folders)
